<resources>
    <string name="app_name">AIPRC</string>
    <string name="home">Home</string>
    <string name="help">Help</string>
    <string name="study">Study</string>
    <string name="profile">Profile</string>
    <string name="please_wait">Please Wait</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome</string>
    <string name="let_s_get_started">Let\'s get started</string>
    <string name="email_address">Email Address</string>
    <string name="forget_password">Forget Password?</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="medical_lab">This course trains participants in promptly recognising several life-threatening emergencies and prevent any permanent damage by applying their skills.</string>
    <string name="basic_of_nutrition">An overview of nutrition and nutrients(micronutrients and macronutrients)</string>
    <string name="resume_writing">This course will give you an overview of how to create an impressive resume and ace your job interview to get your dream job</string>
    <string name="infection">This course will teach you everything you need to know about infection and how to control it effectively</string>
    <string name="study_material">Kindly register your self in your selected program to access your study material</string>
    <string name="feedback">Please share detailed feedback about your concern(s)</string>
    <string name="term_condition">Visit on:http://Aiprc.in</string>
    <string name="privacy_policy">Privacy Policy In general, you can visit rgpcindia.com Internet sites without telling us who you are or revealing any information about yourself. Our Internet servers collect the domain names and IP addresses of visitors and keeps for one month. This information is aggregated to measure the number of visits, average time spent on the site, pages viewed and similar information. The rgpcindia.com uses this information to measure the use of our site and to develop ideas to improve the content of our site. We never share your email address with third parties.</string>
</resources>
