<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
<com.google.android.material.appbar.AppBarLayout
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="wrap_content">
</com.google.android.material.appbar.AppBarLayout>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <FrameLayout
            android:layout_width="match_parent"
            android:background="@color/white"
            android:layout_weight="1"
            android:id="@+id/frame_layout"
            android:layout_height="match_parent"></FrameLayout>
        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigationView"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="bottom"
            android:background="@color/white"
            app:layout_constraintVertical_bias="1.0" >

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_margin="5dp"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1.1"
                    android:id="@+id/home_linr_layout"
                    android:gravity="center"
                    android:layout_height="match_parent">
                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="30dp"
                        android:src="@drawable/white_home"
                        android:id="@+id/home"
                        android:layout_height="30dp">
                    </androidx.appcompat.widget.AppCompatImageView>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:text="@string/home"
                        android:id="@+id/home_text"
                        android:gravity="center"
                        android:textColor="@color/brown"
                        android:textStyle="bold"
                        android:layout_height="match_parent">
                    </androidx.appcompat.widget.AppCompatTextView>
                </androidx.appcompat.widget.LinearLayoutCompat>
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1.1"
                    android:id="@+id/me_linr_layout"
                    android:gravity="center"
                    android:layout_height="match_parent">
                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="30dp"
                        android:id="@+id/book"
                        android:src="@drawable/white_book"
                        android:layout_height="30dp">
                    </androidx.appcompat.widget.AppCompatImageView>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:id="@+id/book_text"
                        android:text="@string/study"
                        android:textColor="@color/brown"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_height="match_parent">
                    </androidx.appcompat.widget.AppCompatTextView>
                </androidx.appcompat.widget.LinearLayoutCompat>
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1.1"
                    android:id="@+id/attendance_linr_layout"
                    android:gravity="center"
                    android:layout_height="match_parent">
                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="30dp"
                        android:id="@+id/help"
                        android:src="@drawable/white_help"
                        android:layout_height="30dp">
                    </androidx.appcompat.widget.AppCompatImageView>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:text="@string/help"
                        android:id="@+id/help_text"
                        android:textColor="@color/brown"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_height="match_parent">
                    </androidx.appcompat.widget.AppCompatTextView>
                </androidx.appcompat.widget.LinearLayoutCompat>
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1.1"
                    android:id="@+id/team_linr_layout"
                    android:gravity="center"
                    android:layout_height="match_parent">
                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="30dp"
                        android:id="@+id/profile"
                        android:src="@drawable/white_profile"
                        android:layout_height="30dp">
                    </androidx.appcompat.widget.AppCompatImageView>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:text="@string/profile"
                        android:id="@+id/profile_text"
                        android:gravity="center"
                        android:textColor="@color/brown"
                        android:textStyle="bold"
                        android:layout_height="match_parent">
                    </androidx.appcompat.widget.AppCompatTextView>
                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </com.google.android.material.bottomnavigation.BottomNavigationView>
    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>